feat: add comment

--- a/R-programming/assignment/39_Project1.html
+++ b/R-programming/assignment/39_Project1.html
@@ -683,6 +683,7 @@ x</code></pre>
 <pre><code>## [1] FALSE</code></pre>
 <pre class="r"><code>&quot;data&quot; &lt; &quot;stats&quot;</code></pre>
 <pre><code>## [1] TRUE</code></pre>
+<p>The number of characters are euqal so true.</p>
 <pre class="r"><code>&quot;hari&quot; == &quot;hare&quot;</code></pre>
 <pre><code>## [1] FALSE</code></pre>
 </div>
