--- a/R-programming/assignment/project2/39_Project2.html
+++ b/R-programming/assignment/project2/39_Project2.html
@@ -1927,6 +1927,121 @@ percentages, and percentages of cases. Finally, we added a total row to
 summarize the overall counts and percentages across all income
 levels.</p>
 </div>
+<div id="import-saq.sav-file-into-r-studio-as-saq-data-frame-and-create-given-tables-and-interpret-each-frequency-table-carefully" class="section level2">
+<h2>Import SAQ.sav file into R studio as SAQ data frame and create given
+tables and interpret each frequency table carefully</h2>
+<pre class="r"><code>library(haven)
+suppressWarnings(library(summarytools))
+
+SAQ8 &lt;- read_sav(&quot;SAQ8.sav&quot;)
+head(SAQ8)</code></pre>
+<div data-pagedtable="false">
+<script data-pagedtable-source type="application/json">
+{"columns":[{"label":["q01"],"name":[1],"type":["dbl+lbl"],"align":["right"]},{"label":["q02"],"name":[2],"type":["dbl+lbl"],"align":["right"]},{"label":["q03"],"name":[3],"type":["dbl+lbl"],"align":["right"]},{"label":["q04"],"name":[4],"type":["dbl+lbl"],"align":["right"]},{"label":["q05"],"name":[5],"type":["dbl+lbl"],"align":["right"]},{"label":["q06"],"name":[6],"type":["dbl+lbl"],"align":["right"]},{"label":["q07"],"name":[7],"type":["dbl+lbl"],"align":["right"]},{"label":["q08"],"name":[8],"type":["dbl+lbl"],"align":["right"]}],"data":[{"1":"2","2":"1","3":"4","4":"2","5":"2","6":"2","7":"3","8":"1"},{"1":"1","2":"1","3":"4","4":"3","5":"2","6":"2","7":"2","8":"2"},{"1":"2","2":"3","3":"2","4":"2","5":"4","6":"1","7":"2","8":"2"},{"1":"3","2":"1","3":"1","4":"4","5":"3","6":"3","7":"4","8":"2"},{"1":"2","2":"1","3":"3","4":"2","5":"2","6":"3","7":"3","8":"2"},{"1":"2","2":"1","3":"3","4":"2","5":"4","6":"4","7":"4","8":"2"}],"options":{"columns":{"min":{},"max":[10]},"rows":{"min":[10],"max":[10]},"pages":{}}}
+  </script>
+</div>
+<pre class="r"><code># check the structure of the data frame
+str(SAQ8)</code></pre>
+<pre><code>## tibble [2,571 × 8] (S3: tbl_df/tbl/data.frame)
+##  $ q01: dbl+lbl [1:2571] 2, 1, 2, 3, 2, 2, 2, 2, 3, 2, 2, 2, 3, 2, 2, 3, 1, 2,...
+##    ..@ label      : chr &quot;Statistics makes me cry&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:6] 1 2 3 4 5 9
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:6] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q02: dbl+lbl [1:2571] 1, 1, 3, 1, 1, 1, 3, 2, 3, 4, 1, 1, 1, 2, 2, 1, 2, 2,...
+##    ..@ label      : chr &quot;My friends will think I&#39;m stupid for not being able to cope with SPSS&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q03: dbl+lbl [1:2571] 4, 4, 2, 1, 3, 3, 3, 3, 1, 4, 5, 3, 3, 1, 3, 2, 5, 3,...
+##    ..@ label      : chr &quot;Standard deviations excite me&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q04: dbl+lbl [1:2571] 2, 3, 2, 4, 2, 2, 2, 2, 4, 3, 2, 3, 4, 2, 4, 2, 2, 3,...
+##    ..@ label      : chr &quot;I dream that Pearson is attacking me with correlation coefficients&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:6] 1 2 3 4 5 9
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:6] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q05: dbl+lbl [1:2571] 2, 2, 4, 3, 2, 4, 2, 2, 5, 2, 2, 4, 3, 2, 2, 2, 1, 3,...
+##    ..@ label      : chr &quot;I don&#39;t understand statistics&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q06: dbl+lbl [1:2571] 2, 2, 1, 3, 3, 4, 2, 2, 3, 1, 1, 3, 2, 2, 2, 2, 1, 4,...
+##    ..@ label      : chr &quot;I have little experience of computers&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q07: dbl+lbl [1:2571] 3, 2, 2, 4, 3, 4, 2, 2, 5, 2, 2, 3, 3, 3, 3, 2, 1, 3,...
+##    ..@ label      : chr &quot;All computers hate me&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...
+##  $ q08: dbl+lbl [1:2571] 1, 2, 2, 2, 2, 2, 2, 2, 5, 2, 2, 1, 3, 2, 2, 2, 1, 2,...
+##    ..@ label      : chr &quot;I have never been good at mathematics&quot;
+##    ..@ format.spss: chr &quot;F1.0&quot;
+##    ..@ labels     : Named num [1:5] 1 2 3 4 5
+##    .. ..- attr(*, &quot;names&quot;)= chr [1:5] &quot;Strongly agree&quot; &quot;Agree&quot; &quot;Neither&quot; &quot;Disagree&quot; ...</code></pre>
+<pre class="r"><code># find the frequency of each column
+freq(SAQ8$q01, cumul = TRUE, round.digits = 1)</code></pre>
+<pre><code>## Frequencies  
+## SAQ8$q01  
+## Label: Statistics makes me cry  
+## Type: Numeric (labelled)  
+## 
+##                               Freq   % Valid   % Valid Cum.   % Total   % Total Cum.
+## --------------------------- ------ --------- -------------- --------- --------------
+##          Strongly agree [1]    270      10.5           10.5      10.5           10.5
+##                   Agree [2]   1338      52.0           62.5      52.0           62.5
+##                 Neither [3]    735      28.6           91.1      28.6           91.1
+##                Disagree [4]    187       7.3           98.4       7.3           98.4
+##       Strongly disagree [5]     41       1.6          100.0       1.6          100.0
+##            Not answered [9]      0       0.0          100.0       0.0          100.0
+##                        &lt;NA&gt;      0                                0.0          100.0
+##                       Total   2571     100.0          100.0     100.0          100.0</code></pre>
+<pre class="r"><code>freq(SAQ8$q02, cumul = TRUE, round.digits = 1)</code></pre>
+<pre><code>## Frequencies  
+## SAQ8$q02  
+## Label: My friends will think I&#39;m stupid for not being able to cope with SPSS  
+## Type: Numeric (labelled)  
+## 
+##                               Freq   % Valid   % Valid Cum.   % Total   % Total Cum.
+## --------------------------- ------ --------- -------------- --------- --------------
+##          Strongly agree [1]   1436      55.9           55.9      55.9           55.9
+##                   Agree [2]    808      31.4           87.3      31.4           87.3
+##                 Neither [3]    206       8.0           95.3       8.0           95.3
+##                Disagree [4]    101       3.9           99.2       3.9           99.2
+##       Strongly disagree [5]     20       0.8          100.0       0.8          100.0
+##                        &lt;NA&gt;      0                                0.0          100.0
+##                       Total   2571     100.0          100.0     100.0          100.0</code></pre>
+<pre class="r"><code>freq(SAQ8$q03, cumul = TRUE, round.digits = 1)</code></pre>
+<pre><code>## Frequencies  
+## SAQ8$q03  
+## Label: Standard deviations excite me  
+## Type: Numeric (labelled)  
+## 
+##                               Freq   % Valid   % Valid Cum.   % Total   % Total Cum.
+## --------------------------- ------ --------- -------------- --------- --------------
+##          Strongly agree [1]    497      19.3           19.3      19.3           19.3
+##                   Agree [2]    672      26.1           45.5      26.1           45.5
+##                 Neither [3]    878      34.2           79.6      34.2           79.6
+##                Disagree [4]    448      17.4           97.0      17.4           97.0
+##       Strongly disagree [5]     76       3.0          100.0       3.0          100.0
+##                        &lt;NA&gt;      0                                0.0          100.0
+##                       Total   2571     100.0          100.0     100.0          100.0</code></pre>
+<p>Here, we use the ‘haven’ and ‘summarytools’ libraries to analyze data
+from a SPSS (.sav) file named “SAQ8.sav”. After loading the data into a
+dataframe called “SAQ8”, the head() function displays the first
+six(default) rows of the dataset. The str() function provides additional
+information about the dataframe’s structure. The freq() function is then
+employed multiple times to generate frequency tables for different
+variables within the dataset. Each frequency table displays the count
+and percentage of responses for a specific question or variable, along
+with cumulative percentages as cumul = TRUE. The round.digits argument
+controls the precision of the percentages displayed in the frequency
+tables.</p>
+</div>
 
 
 
